@@ -2,23 +2,23 @@
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- *
  */
 
 package org.apache.jmeter.engine;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.List;
 
 import org.apache.jmeter.engine.util.NoThreadClone;
 import org.apache.jmeter.testelement.TestElement;
@@ -33,7 +33,7 @@ public class TreeCloner implements HashTreeTraverser {
 
     private final ListedHashTree newTree;
 
-    private final LinkedList<Object> objects = new LinkedList<>();
+    private final List<Object> objects = new ArrayList<>();
 
     private final boolean honourNoThreadClone;
 
@@ -71,7 +71,7 @@ public class TreeCloner implements HashTreeTraverser {
     protected Object addNodeToTree(Object node) {
         if ( (node instanceof TestElement) // Check can cast for clone
            // Don't clone NoThreadClone unless honourNoThreadClone == false
-          && (!(honourNoThreadClone && (node instanceof NoThreadClone)))
+          && !(honourNoThreadClone && node instanceof NoThreadClone)
         ) {
             Object newNode = ((TestElement) node).clone();
             newTree.add(objects, newNode);
@@ -87,12 +87,12 @@ public class TreeCloner implements HashTreeTraverser {
      * @param node Object
      */
     private void addLast(Object node) {
-        objects.addLast(node);
+        objects.add(node);
     }
 
     @Override
     public void subtractNode() {
-        objects.removeLast();
+        objects.remove(objects.size() - 1);
     }
 
     public ListedHashTree getClonedTree() {
