@@ -2,22 +2,22 @@
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- *
  */
 
 package org.apache.jmeter.gui;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -157,16 +157,20 @@ public final class GUIFactory {
      * @throws IllegalAccessException
      *             if access rights do not permit an instance of the GUI class
      *             to be created
+     * @throws NoSuchMethodException
+     *             when no constructor can be found on the given {@code guiClass}
+     * @throws InvocationTargetException
+     *             when the called constructor throws an exception
      */
     public static void registerGUI(String key, Class<?> guiClass, Class<?> testClass) throws InstantiationException,
-            IllegalAccessException {
+            IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         // TODO: This method doesn't appear to be used.
         JMeterGUIComponent gui;
 
         if (guiClass == TestBeanGUI.class) {
             gui = new TestBeanGUI(testClass);
         } else {
-            gui = (JMeterGUIComponent) guiClass.newInstance();
+            gui = (JMeterGUIComponent) guiClass.getDeclaredConstructor().newInstance();
         }
         GUI_MAP.put(key, gui);
     }
