@@ -2,18 +2,17 @@
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
+ * The ASF licenses this file to you under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- *
  */
 
 package org.apache.jmeter.junit;
@@ -29,6 +28,7 @@ import java.io.InputStream;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.rmi.RemoteException;
 import java.util.Collection;
 import java.util.HashMap;
@@ -509,8 +509,9 @@ public class JMeterTest extends JMeterTestCaseJUnit implements Describable {
             Class<?> c = Class.forName(className);
             try {
                 // Try with a parameter-less constructor first
-                objects.add(c.newInstance());
-            } catch (InstantiationException e) {
+                objects.add(c.getDeclaredConstructor().newInstance());
+            } catch (InstantiationException | NoSuchMethodException | IllegalAccessException |
+                    InvocationTargetException e) {
                 caught = e;
                 try {
                     // Events often have this constructor
